# video-labeler

./: .gitignore  README.md  pyproject.toml
sample/: real_demo.annotations  sample.annotations
scripts/: create_gif_preview.py  create_sample_video.py  render_annotations.py
src/labeler/: bbox_selector.py  geometry.py  label_tool.py  tracker.py  ui.py  validate_tool.py  video.py
src/skyways_cv_labeler/: annotation_io.py
tests/: test_annotation_io.py  test_bbox_selector.py  test_geometry.py  test_label_tool.py  test_tracker.py  test_ui.py  test_validate_tool.py  test_video.py
