[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "labeler"
version = "0.1.0"
description = "Interactive single-object video labeling and annotation validation tools"
requires-python = ">=3.10"
dependencies = [
    "numpy>=1.24",
    "opencv-contrib-python>=4.8",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "ruff>=0.5",
]

[project.scripts]
label = "labeler.label_tool:main"
validate = "labeler.validate_tool:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100